# stochlab

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  Makefile  README.md  ROADMAP.md  demo_monte_carlo.py  demo_random_walk.py  pyproject.toml  test.ipynb
.github/: CICD_SETUP.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: DEVGUIDE.md  README.md  architecture.md  conf.py  getting_started.md  index.rst  quick_reference.md
docs/_build/html/: .buildinfo  .buildinfo.bak  CHANGELOG.html  DEVGUIDE.html  README.html  STRUCTURE.html  analytics.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  quick_reference.html  search.html  searchindex.js
docs/_build/html/.doctrees/: CHANGELOG.doctree  DEVGUIDE.doctree  README.doctree  STRUCTURE.doctree  analytics.doctree  environment.pickle  getting_started.doctree  index.doctree  quick_reference.doctree
docs/_build/html/.doctrees/api/: index.doctree
docs/_build/html/.doctrees/contributing/: development_guide.doctree
docs/_build/html/.doctrees/guides/: analytics.doctree  monte_carlo.doctree
docs/_build/html/.doctrees/technical/: implementation_summary.doctree  monte_carlo_design.doctree  parallelization_analysis.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/stochlab/core/: process.html  results.html  simulation.html  state_space.html
docs/_build/html/_modules/stochlab/models/: markov_chain.html  mm1_queue.html  random_walk.html
docs/_build/html/_sources/: CHANGELOG.md.txt  README.md.txt  STRUCTURE.md.txt  analytics.md.txt  getting_started.md.txt  index.rst.txt
docs/_build/html/_sources/api/: index.rst.txt
docs/_build/html/_sources/guides/: monte_carlo.md.txt
docs/_build/html/_sources/technical/: parallelization_analysis.md.txt
docs/_build/html/_static/css/: custom.css
docs/_build/html/api/: index.html
docs/_build/html/contributing/: development_guide.html
docs/_build/html/guides/: analytics.html  monte_carlo.html
docs/_build/html/technical/: implementation_summary.html  monte_carlo_design.html  parallelization_analysis.html
docs/api/: core.rst  index.rst  models.rst
docs/examples/: financial_modeling.md
docs/technical/: cicd_plan.md  cicd_tutorial.md  implementation_summary.md  inference_landscape.md  monte_carlo_design.md
src/stochlab/: __init__.py
src/stochlab/analytics/: __init__.py  markov.py
src/stochlab/core/: __init__.py  process.py  results.py  simulation.py  state_space.py
src/stochlab/mc/: __init__.py  engine.py  results.py  seeding.py
src/stochlab/mc/execution/: __init__.py  parallel_base.py  parallel_process.py
src/stochlab/models/: __init__.py  markov_chain.py  mm1_queue.py  random_walk.py
tests/: test_analytics_markov.py  test_core_integration.py  test_markov_chain.py  test_mc_engine.py  test_mc_results.py  test_mc_seeding.py  test_mm1_queue.py  test_path.py  test_random_walk.py  test_results.py  test_state_space.py
