[project]
name = "stochlab"
version = "0.1.0"
description = "Discrete-time stochastic processes, Monte Carlo, analytics, and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.3.0",
  "myst-parser>=2.0.0",
]
dev = [
  "black>=25.11.0",
  "ipykernel>=7.1.0",
  "pytest>=9.0.1",
  "ruff>=0.14.5",
  "mypy>=1.5.0",
]
