[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stochlab"
version = "0.1.1"
description = "Discrete-time stochastic processes, Monte Carlo, analytics, and reporting."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Oscar Thiele Serrano" },
]
license = "MIT"
keywords = ["stochastic-processes", "markov-chains", "monte-carlo", "analytics", "queueing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.3.0",
  "myst-parser>=2.0.0",
]
dev = [
  "black>=25.11.0",
  "ipykernel>=7.1.0",
  "pytest>=9.0.1",
  "pytest-cov>=4.0.0",
  "coverage[toml]>=7.0.0",
  "ruff>=0.14.5",
  "mypy>=1.5.0",
  "build>=1.0.0",
  "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/oscarsthse/stochlab"
Documentation = "https://oscarthse.github.io/stochlab/"
Source = "https://github.com/oscarsthse/stochlab"
Issues = "https://github.com/oscarsthse/stochlab/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stochlab = ["py.typed"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/_build/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
